--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.4.0",
+    "google-auth-library": "^9.6.3",
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
