--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon src/server.js",
     "start:prod": "NODE_ENV=production nodemon src/server.js"
   },
-  "author": "Mukhammadali",
+  "author": "Muhammadali",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
@@ -24,10 +25,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.6",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "sharp": "^0.30.7",
     "slugify": "^1.6.5",
+    "stripe": "^14.19.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
