--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "start:prod": "NODE_ENV=production nodemon src/server.js"
+    "start:prod": "NODE_ENV=production node src/server.js"
   },
   "author": "Muhammadali",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
